--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>World Cup Matches app</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="app">
@@ -17,11 +21,10 @@
                     <h2>24/11 <span>thursday</span></h2>
                     <ul>
                         <li>
-                            <img src="" alt="">
-                            <strong>07:00</strong>
-                            <img src="" alt="">
+                            <img src="assets/icon-brazil.svg" alt="Brazil's flag">
+                            <strong>16:00</strong>
+                            <img src="assets/icon-serbia.svg" alt=" Serbia's flag">
                         </li>
-
                         <li>
                             <img src="assets/icon-brazil.svg" alt="Brazil's flag">
                             <strong>16:00</strong>
