--- a/index.html
+++ b/index.html
@@ -12,27 +12,8 @@
     </head>
     <body>
         <div id="app">
-            <header>
-                <img src="assets/logo.svg" alt="">
-            </header>
-
-            <main class="cards">
-                <div class="card">
-                    <h2>24/11 <span>thursday</span></h2>
-                    <ul>
-                        <li>
-                            <img src="assets/icon-brazil.svg" alt="Brazil's flag">
-                            <strong>16:00</strong>
-                            <img src="assets/icon-serbia.svg" alt=" Serbia's flag">
-                        </li>
-                        <li>
-                            <img src="assets/icon-brazil.svg" alt="Brazil's flag">
-                            <strong>16:00</strong>
-                            <img src="assets/icon-serbia.svg" alt=" Serbia's flag">
-                        </li>
-                    </ul>
-                </div>
-            </main>
+            
         </div>
+       <script src="./main.js"></script> 
     </body>
 </html>
